idea list 가져오기 와 like 버튼 표시 , 시간 표시

--- a/src/assets/todonotodo.css
+++ b/src/assets/todonotodo.css
@@ -4,8 +4,8 @@ body, html {
 
 body {
   background: #81d4ff; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #81d4ff , #edc5ed); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #81d4ff , #edc5ed); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to bottom, #81d4ff , #edc5ed); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #81d4ff , #edc5ed); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .fade-enter-active {
